# mihon-ocr

./: .gitignore  CONTRIBUTING.md  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml  update_website.yml
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/mihon/data/ocr/: OcrRepositoryImplTest.kt
app/src/androidTest/resources/mihon/data/ocr/: ocr_test_image.base64  ocr_test_image2.base64
app/src/main/: AndroidManifest.xml
app/src/main/java/eu/kanade/domain/: DomainModule.kt
app/src/main/java/eu/kanade/presentation/dictionary/: DictionarySearchScreen.kt  FrequencyFormatter.kt  GlossaryContent.kt  GlossaryFormatter.kt  GlossaryTable.kt  GlossaryUtils.kt
app/src/main/java/eu/kanade/presentation/more/: MoreScreen.kt
app/src/main/java/eu/kanade/presentation/more/settings/screen/: SettingsDictionaryScreen.kt
app/src/main/java/eu/kanade/presentation/more/settings/screen/about/: AboutScreen.kt
app/src/main/java/eu/kanade/presentation/reader/: OcrLoadingIndicator.kt  OcrResultBottomSheet.kt  OcrSelectionOverlay.kt
app/src/main/java/eu/kanade/presentation/reader/appbars/: BottomReaderBar.kt  ReaderAppBars.kt
app/src/main/java/eu/kanade/tachiyomi/: App.kt
app/src/main/java/eu/kanade/tachiyomi/data/updater/: AppUpdateChecker.kt
app/src/main/java/eu/kanade/tachiyomi/ui/dictionary/: DictionarySearchScreenModel.kt  DictionaryTab.kt
app/src/main/java/eu/kanade/tachiyomi/ui/more/: MoreTab.kt
app/src/main/java/eu/kanade/tachiyomi/ui/reader/: ReaderActivity.kt  ReaderViewModel.kt
app/src/main/java/eu/kanade/tachiyomi/ui/setting/: SettingsScreen.kt
app/src/main/java/eu/kanade/tachiyomi/ui/setting/dictionary/: DictionarySettingsScreenModel.kt
app/src/main/java/eu/kanade/tachiyomi/util/system/: LocaleHelper.kt
app/src/main/res/drawable/: ic_mihon.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
core/archive/src/main/kotlin/mihon/core/archive/: ArchiveReader.kt
core/common/src/main/kotlin/tachiyomi/core/common/: Constants.kt
data/: build.gradle.kts
data/src/main/cpp/: CMakeLists.txt  litert_logger_stub.cpp  ocr_inference.cpp  ocr_inference.h  ocr_native.cpp  text_postprocessor.cpp  text_postprocessor.h  vocab_data.cpp  vocab_data.h
data/src/main/java/mihon/data/dictionary/: DictionaryMapper.kt  DictionaryParserImpl.kt  DictionaryRepositoryImpl.kt
data/src/main/java/mihon/data/ocr/: OcrRepositoryImpl.kt  TextPostprocessor.kt  Vocab.kt
data/src/main/java/mihon/data/ocr/di/: OcrModule.kt
data/src/main/java/tachiyomi/data/release/: ReleaseServiceImpl.kt
data/src/main/sqldelight/tachiyomi/data/: dictionary.sq
data/src/test/java/mihon/data/dictionary/: DictionaryParserImplTest.kt
domain/: build.gradle.kts
domain/src/main/java/mihon/domain/dictionary/interactor/: DictionaryInteractor.kt  GetDictionaryKanji.kt  ImportDictionary.kt  SearchDictionaryTerms.kt
domain/src/main/java/mihon/domain/dictionary/model/: Dictionary.kt  DictionaryIndex.kt  DictionaryKanji.kt  DictionaryKanjiMeta.kt  DictionaryTag.kt  DictionaryTerm.kt  DictionaryTermMeta.kt  GlossaryModels.kt  ImportResult.kt
domain/src/main/java/mihon/domain/dictionary/repository/: DictionaryRepository.kt
domain/src/main/java/mihon/domain/dictionary/service/: DictionaryParser.kt  JapaneseDeinflector.kt
domain/src/main/java/mihon/domain/ocr/exception/: OcrException.kt
domain/src/main/java/mihon/domain/ocr/interactor/: OcrProcessor.kt
domain/src/main/java/mihon/domain/ocr/repository/: OcrRepository.kt
domain/src/test/java/mihon/domain/dictionary/service/: JapaneseDeinflectorTest.kt
gradle/: libs.versions.toml
i18n/src/commonMain/moko-resources/base/: strings.xml
presentation-core/src/main/java/tachiyomi/presentation/core/components/: ResizableSheet.kt
telemetry/src/firebase/kotlin/mihon/telemetry/: TelemetryConfig.kt
